--- a/dazuoye02.html
+++ b/dazuoye02.html
@@ -99,20 +99,20 @@
 </head>
 <body>
     <div class="top">
-        <img src="/images/a15.png"/>
+        <img src="images/a15.png"/>
         <div class="tophide">
             <div class="move">[温馨提示]最近有不少不法分子在网上骗人，请大家注意!!！</div>
         </div>
     </div>
 	<div class="box" id="box">
 		<div class="slider" id="slider">
-			<div class="slide"><img src="/images/b5.png" alt=""></div>
-			<div class="slide"><img src="/images/b1.png" alt=""></div>
-			<div class="slide"><img src="/images/b2.png" alt=""></div>
-			<div class="slide"><img src="/images/b3.png" alt=""></div>
-			<div class="slide"><img src="/images/b4.png" alt=""></div>
-			<div class="slide"><img src="/images/b5.png" alt=""></div>
-			<div class="slide"><img src="/images/b1.png" alt=""></div>
+			<div class="slide"><img src="images/b5.png" alt=""></div>
+			<div class="slide"><img src="images/b1.png" alt=""></div>
+			<div class="slide"><img src="images/b2.png" alt=""></div>
+			<div class="slide"><img src="images/b3.png" alt=""></div>
+			<div class="slide"><img src="images/b4.png" alt=""></div>
+			<div class="slide"><img src="images/b5.png" alt=""></div>
+			<div class="slide"><img src="images/b1.png" alt=""></div>
 		</div>
 		<span id="left"><</span>
 		<span id="right">></span>
